fix: JpaRepository 적용 후 나던 에러 수정